# cc-extract

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  repomix-output.xml  requirements.txt
cc_extractor/: __init__.py  __main__.py  _utils.py  bundler.py  download_index.py  download_picker.py  downloader.py  extractor.py  macho.py  model_proxy.py  patch_workflow.py  patcher.py  tui.py  variant_tweaks.py  variants.py  workspace.py
ccsilo/: __init__.py  __main__.py  _utils.py  bundler.py  download_picker.py  downloader.py  extractor.py  model_proxy.py  patch_workflow.py  variant_tweaks.py
docs/: CCR.md  PROMPTS.md  RELEASE.md  THIRD_PARTY_NOTICES.md  TUI_FLOW.md  patches.md
prompts/: 2.0.14.json  2.0.15.json  2.0.17.json  2.0.18.json  2.0.19.json  2.0.20.json  2.0.21.json  2.0.22.json  2.0.24.json  2.0.25.json  2.0.26.json  2.0.27.json  2.0.28.json  2.0.29.json  2.0.30.json  2.0.31.json  2.0.32.json  2.0.33.json  2.0.34.json  2.0.35.json  2.0.36.json  2.0.37.json  2.0.41.json  2.0.42.json  2.0.43.json  2.0.44.json  2.0.45.json  2.0.46.json  2.0.47.json  2.0.49.json  2.0.50.json  2.0.51.json  2.0.52.json  2.0.53.json  2.0.54.json  2.0.55.json  2.0.56.json  2.0.57.json  2.0.58.json  2.0.59.json  (+135 more)
tests/: test_binary_patcher_apply.py  test_binary_patcher_bun_compat.py  test_binary_patcher_js_patch.py  test_binary_patcher_prompts.py  test_binary_patcher_repack.py  test_binary_patcher_strip_bun_wrapper.py  test_binary_patcher_theme.py  test_binary_patcher_unpack_and_patch.py  test_bun_extract.py  test_bun_extract_replace.py  test_bundler.py  test_codesign.py  test_download_index.py  test_download_picker.py  test_downloader.py  test_extractor.py  test_integration_real_binary.py  test_model_proxy.py  test_package.py  test_patch_release_check.py  test_patcher.py  test_prompt_extractor.py  test_providers.py  (+6 more)
(+288 files in other folders)
