[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-extractor"
version = "0.1.0"
description = "A tool for extracting, patching, and repacking Bun standalone Claude Code binaries"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ratatui>=0.4.2",
    "tqdm>=4.66.0",
]
authors = [
    { name = "whit3rabbit" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
cc-extractor = "cc_extractor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cc_extractor*"]
